# oaas-sdk2-py

./: README.md  debug_test.py  dev.Dockerfile  docker-compose.yml  justfile  pyproject.toml  pytest.ini  reference.md  run_tests.py  test_phase2_week3_enhanced_decorators.py  test_session_management.py  test_simplified_compatibility.py
.github/: copilot-instructions.md
deploy/: Dockerfile  loki-config.yml  oaas-run.sh  otel-collector-config.yml
docs/: enhanced-serialization-design.md  enhanced-serialization-usage.md  implementation-roadmap.md  performance-optimization-plan.md  reference.md  sdk-interface-simplification-proposal-2.md  sdk-interface-simplification-proposal.md  server-agent-management-design.md  server-agent-management-usage.md  session-management.md  tutorial.ipynb  tutorial.md  tutorial_v2.ipynb  tutorial_v2.md
emulator/: emul_script.py
examples/: Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
examples/helloworld/: Dockerfile  __init__.py  __main__.py  docker-compose.yml  justfile  pyproject.toml  session.py
examples/helloworld/helloworld/: __init__.py  __main__.py
oaas_sdk2_py/: __init__.py  config.py  data.py  engine.py  handler.py  mock.py  model.py  obj.py  repo.py  rpc.py  rpc_futures.py  session.py  simplified.py  telemetry.py
oprc-py/: Cargo.toml  justfile  oprc-py.pyi  pyproject.toml
protos/: oprc-data.proto  oprc-invoke.proto
specification/: introduction.md  reference.md  tutorial.md
tests/: README.md  conftest.py  sample_cls.py  test_accessors.py  test_comprehensive_foundation.py  test_constructor_and_setter_proxy.py  test_dict_functions.py  test_enhanced_decorators.py  test_enhanced_serialization.py  test_event.py  test_grpc.py  test_meta.py  test_mock.py  test_parameter_types.py  test_primitive_types.py  test_proto.py  test_references.py  test_rpc_system.py  test_serve.py  test_server_agent_management.py  (+4 more)
(+57 files in other folders)
