
[tool.poetry]
name = "oaas-sdk2-py"
version = "0.1.4"
description = ""
authors = ["Pawissanutt <pawissanutt@gmail.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "<4.0, >=3.10"
asyncio = "^3.4.3"
betterproto = {extras = ["compiler"], version = ">=2.0.0b7"}
eclipse-zenoh= "^1.2.0"
fastapi = "^0.115.4"
grpcio-tools = "^1.67.1"
grpcio = "^1.67.1"
pydantic = "^2.9.1"
pydantic-settings = "^2.6.1"
pyyaml = "^6.0.2"
tsidpy = "^1.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
