[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Pawissanutt <pawissanutt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
oaas-sdk2-py = {path="../../"}
fastapi = "^0.113.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
