[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Pawissanutt <pawissanutt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
oaas-sdk2-py = {path="../../",  develop = true}
# oaas-sdk2-py = "^0.1.3"
fastapi = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
